--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcom to Lab 9 Page #{title}
+  button(type="button",class="btn btn-primary") Click Here
